--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
@@ -938,13 +938,14 @@ font-size: 77%;
 .yui-skin-lecmTheme .yui-panel-container.focused .yui-panel .hd {
 }
 .yui-skin-lecmTheme .container-close {
-position: absolute;
-top: 5px;
-right: 6px;
-width: 25px;
-height: 15px;
-background: url(sprite.png) no-repeat 0 -300px;
-cursor: pointer;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 25px;
+    height: 15px;
+    background: url(sprite.png) no-repeat 0 -300px;
+    border-radius: 6px;
+    cursor: pointer;
 }
 .yui-skin-lecmTheme .yui-panel-container .underlay {
 right: -1px;
@@ -958,19 +959,20 @@ background-color: #fff;
 _padding: 2px 4px 0 2px;
 }
 .yui-skin-lecmTheme .yui-panel-container.shadow .underlay {
-position: absolute;
-top: 2px;
-left: -3px;
-right: -3px;
-bottom: -3px;*top:4px;*left:-1px;*right:-1px;*bottom:-1px;
-_top: 0;
-_left: 0;
-_right: 0;
-_bottom: 0;
-_margin-top: 3px;
-_margin-left: -1px;
-background-color: #000;
-opacity: .12;*filter:alpha(opacity=12);
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    right: -3px;
+    bottom: -3px;*top:4px;*left:-1px;*right:-1px;*bottom:-1px;
+    _top: 0;
+    _left: 0;
+    _right: 0;
+    _bottom: 0;
+    _margin-top: 3px;
+    _margin-left: -1px;
+    background-color: #000;
+    opacity: .12;*filter:alpha(opacity=12);
+    border-radius: 5px;
 }
 .yui-skin-lecmTheme .yui-dialog .ft {
 border-top: none;
