В дерево добавлен scroll.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@500 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -85,8 +85,17 @@
     background: #c5c5c5;
     margin: 0;
     padding: 0;
-
 }
+
+#alf-filters{
+	margin-left: -5px;
+}
+
+.datalists.tree{
+	overflow: auto;
+	width: 100%;
+}
+
 #yui-main .datalist-toolbar {
     margin: 0;
 }
@@ -431,6 +440,11 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel .bd .yui-resize .yui-resize-handle
 {
    background-color: #F7FDF8;
+}
+
+.yui-resize-handle.yui-resize-handle-r
+{
+	margin-right: -4px;
 }
 
 /* Data Lists: DataTable (Needs to appear before yui-dt-highlighted rule) */
