--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/object-finder/lecm-object-finder.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/object-finder/lecm-object-finder.css
@@ -204,12 +204,10 @@
 {
 }
 
-.object-finder .picker-items
-{
-   border: 2px solid #aaa;
+.object-finder div.picker-items {
+   border: 1px solid #aaa;
    height: 20em;
-   overflow-x: auto;
-   overflow-y: scroll;
+   overflow: auto;
    position: relative;
 }
 
@@ -292,26 +290,22 @@
    display: none;
 }
 
-.object-finder .picker-items tbody
-{
-   outline: none;
+.object-finder div.picker-items tbody {
+    outline: none;
 }
 
-.object-finder .picker-items tr.create-new-row
-{
-   background-color: #ffffe0;
+.object-finder div.picker-items tr.create-new-row {
+    background-color: #ffffe0;
 }
 
-.object-finder .picker-items.yui-dt .yui-dt-message td
-{
-   border: medium none;
+.object-finder div.picker-items.yui-dt .yui-dt-message td {
+    border: medium none;
 }
 
-.object-finder .picker-items.yui-dt .yui-dt-data td
-{
-   border-bottom: 1px dashed #d9d9d9;
-   border-right: medium none;
-   vertical-align: middle;
+.object-finder div.picker-items.yui-dt .yui-dt-data td {
+    border-bottom: 1px solid #c5c5c5;
+    border-right: medium none;
+    vertical-align: middle;
 }
 
 .object-finder .panel-left,
