Стили для контролов выбора из справочников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@504 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1748,3 +1748,7 @@ div.association-auto-complete-selected-item-even:last-child {
 div.association-auto-complete-selected-item-even {
     background-color: #f8f8f8;
 }
+
+div.object-finder .picker-items .addIcon {
+    background: transparent url(images/add-item.png) no-repeat center center;
+}
