Стили для контролов выбора из справочников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@506 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1749,6 +1749,18 @@ div.association-auto-complete-selected-item-even {
     background-color: #f8f8f8;
 }
 
+/* */
+
 div.object-finder .picker-items .addIcon {
     background: transparent url(images/add-item.png) no-repeat center center;
+}
+
+div.orgchart-picker-menu .search-button button {
+    background: transparent url(images/search.png) no-repeat center center;
+    height: 25px;
+    width: 25px;
+}
+
+div.orgchart-picker-menu .search-input {
+    margin-right: 3px;
 }
