Orgstructure menu buttons; Dictionaries menu buttons
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@529 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -42,7 +42,7 @@
     float: left;
     margin: 10px 5px;
 }
-#bd #lecm-menu #menu-buttons > div:not(:last-of-type) {
+#bd #lecm-menu #menu-buttons > span:not(:last-of-type) {
     margin-bottom: 10px;
 }
 #bd #lecm-menu button {
