навел порядок среди названий страниц
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@574 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/webapp/css/lecm-delegation/delegation-menu.css
+++ b/lecm-delegation/share/src/main/webapp/css/lecm-delegation/delegation-menu.css
@@ -1,6 +1,9 @@
-#lecm-menu .delegation-menu #menu-buttons-delegationBtn span.first-child {
-    background: url('../../images/lecm-delegation/delegation_32.png') no-repeat 4px 4px;
+#lecm-menu #menu-buttons #menu-buttons-delegationListBtn span.first-child {
+    background: url('/share/res/images/lecm-delegation/delegation_32.png') no-repeat 4px 4px;
 }
-#lecm-menu .delegation-menu #menu-buttons-delegationOptsBtn span.first-child {
-    background: url('../../images/lecm-delegation/delegation_32.png') no-repeat 4px 4px;
+#lecm-menu #menu-buttons #menu-buttons-delegationOptsBtn span.first-child {
+    background: url('/share/res/images/lecm-delegation/delegation_32.png') no-repeat 4px 4px;
+}
+#lecm-menu #menu-buttons #menu-buttons-delegationBtn span.first-child {
+    background: url('/share/res/images/lecm-delegation/delegation_32.png') no-repeat 4px 4px;
 }
