--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
@@ -4462,74 +4462,88 @@ z-index: 1;
 .yui-navset-top .yui-nav,.yui-navset-bottom .yui-nav {
 position: static;
 }
-.yui-navset .yui-navset-left .yui-nav,.yui-navset-left .yui-nav {
-left: 0;
-right: auto;
+.yui-navset .yui-navset-left .yui-nav,
+.yui-navset-left .yui-nav {
+    left: 0;
+    right: auto;
 }
-.yui-navset .yui-navset-right .yui-nav,.yui-navset-right .yui-nav {
-right: 0;
-left: auto;
+.yui-navset .yui-navset-right .yui-nav,
+.yui-navset-right .yui-nav {
+    right: 0;
+    left: auto;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav,.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav {
-border: solid #2647a0;
-border-width: 0 0 5px;
-Xposition: relative;
-zoom: 1;
+.yui-skin-lecmTheme .yui-navset .yui-nav,
+.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav {
+    border: none;
+    Xposition: relative;
+    zoom: 1;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav li,.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav li {
-margin: 0 0.16em 0 0;
-padding: 1px 0 0;
-zoom: 1;
+.yui-skin-lecmTheme .yui-navset .yui-nav li,
+.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav li {
+    margin: 0 0.16em 0 0;
+    padding: 1px 0 0;
+    zoom: 1;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav .selected,.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav .selected {
-margin: 0 0.16em -1px 0;
+.yui-skin-lecmTheme .yui-navset .yui-nav li.selected,
+.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav li.selected {
+    margin: 0 0.16em -1px 0;
+    background: transparent;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav a,.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav a {
-background: #d8d8d8 url(sprite.png) repeat-x;
-border: solid #a3a3a3;
-border-width: 0 1px;
-color: #000;
-position: relative;
-text-decoration: none;
+.yui-skin-lecmTheme .yui-navset .yui-nav a,
+.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav a {
+    background: #d8d8d8 url(sprite.png) repeat-x;
+    border: solid #a3a3a3;
+    border-width: 0 1px;
+    color: #000;
+    position: relative;
+    text-decoration: none;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav a em,.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav a em {
-border: solid #a3a3a3;
-border-width: 1px 0 0;
-cursor: hand;
-padding: 0.25em .75em;
-left: 0;
-right: 0;
-bottom: 0;
-top: -1px;
-position: relative;
+.yui-skin-lecmTheme .yui-navset .yui-nav a em,
+.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-nav a em {
+    border: solid #a3a3a3;
+    border-width: 1px 0 0;
+    cursor: hand;
+    padding: 0.25em .75em;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: -1px;
+    position: relative;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav .selected a,.yui-skin-lecmTheme .yui-navset .yui-nav .selected a:focus,.yui-skin-lecmTheme .yui-navset .yui-nav .selected a:hover {
-background: #2647a0 url(sprite.png) repeat-x left -1400px;
-color: #fff;
+.yui-skin-lecmTheme .yui-navset .yui-nav .selected a,
+.yui-skin-lecmTheme .yui-navset .yui-nav .selected a:focus,
+.yui-skin-lecmTheme .yui-navset .yui-nav .selected a:hover {
+    background: #f4f6fe;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav a:hover,.yui-skin-lecmTheme .yui-navset .yui-nav a:focus {
-background: #bfdaff url(sprite.png) repeat-x left -1300px;
-outline: 0;
+.yui-skin-lecmTheme .yui-navset .yui-nav a:hover,
+.yui-skin-lecmTheme .yui-navset .yui-nav a:focus {
+    background: #bfdaff url(sprite.png) repeat-x left -100px;
+    outline: 0;
 }
 .yui-skin-lecmTheme .yui-navset .yui-nav .selected a em {
-padding: 0.35em 0.75em;
+    padding: 0.35em 0.75em;
 }
-.yui-skin-lecmTheme .yui-navset .yui-nav .selected a,.yui-skin-lecmTheme .yui-navset .yui-nav .selected a em {
-border-color: #243356;
+.yui-skin-lecmTheme .yui-navset .yui-nav .selected a,
+.yui-skin-lecmTheme .yui-navset .yui-nav .selected a em {
+    border-color: #808080;
+    border-radius: 2px 2px 0 0;
 }
 .yui-skin-lecmTheme .yui-navset .yui-content {
-background: #edf5ff;
+    background: #edf5ff;
 }
-.yui-skin-lecmTheme .yui-navset .yui-content,.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-content {
-border: 1px solid #808080;
-border-top-color: #243356;
-padding: 0.25em 0.5em;
+.yui-skin-lecmTheme .yui-navset .yui-content,
+.yui-skin-lecmTheme .yui-navset .yui-navset-top .yui-content {
+    border: 1px solid #808080;
+    padding: 0.25em 0.5em;
 }
-.yui-skin-lecmTheme .yui-navset-left .yui-nav,.yui-skin-lecmTheme .yui-navset .yui-navset-left .yui-nav,.yui-skin-lecmTheme .yui-navset .yui-navset-right .yui-nav,.yui-skin-lecmTheme .yui-navset-right .yui-nav {
-border-width: 0 5px 0 0;
-Xposition: absolute;
-top: 0;
-bottom: 0;
+.yui-skin-lecmTheme .yui-navset-left .yui-nav,
+.yui-skin-lecmTheme .yui-navset .yui-navset-left .yui-nav,
+.yui-skin-lecmTheme .yui-navset .yui-navset-right .yui-nav,
+.yui-skin-lecmTheme .yui-navset-right .yui-nav {
+    border-width: 0 5px 0 0;
+    Xposition: absolute;
+    top: 0;
+    bottom: 0;
 }
 .yui-skin-lecmTheme .yui-navset .yui-navset-right .yui-nav,.yui-skin-lecmTheme .yui-navset-right .yui-nav {
 border-width: 0 0 0 5px;
