Common block height fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@618 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -57,6 +57,8 @@
     border-radius: 3px;
     margin: 5px 5px 5px 60px;
     position: relative;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 #bd #lecm-content .toolbar .header-bar > div {
     margin-top: 1px;
