ALF-195: прыганье элемента: fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@622 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
@@ -1126,6 +1126,7 @@ z-index: 9000;
     margin: 0;
 }
 .yui-skin-lecmTheme .datagrid .grid.yui-dt {
+    min-height: 0%; /* important IE9 fix */
     overflow: auto;
 }
 .yui-skin-lecmTheme .datagrid .grid.yui-dt table,
