заготовка под страницу настройки бизнес ролей в оргструктуре
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@645 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
@@ -35,6 +35,9 @@
 #lecm-menu #menu-buttons #menu-buttons-organizationBtn span.first-child {
     background: url('/share/res/images/lecm-orgstructure/icons_alfresco_top-menu-37.png') no-repeat 4px 4px;
 }
+#lecm-menu #menu-buttons #menu-buttons-businessRolesBtn span.first-child {
+    background: url('/share/res/images/lecm-orgstructure/icons_alfresco_top-menu-24.png') no-repeat 4px 4px;
+}
 
 /* Dictionary menu */
 #lecm-menu #menu-buttons #menu-buttons-dictionariesBtn span.first-child {
