[+] ALF-184. Формы настройки действий – доработка и переработка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@654 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
@@ -1,3 +1,18 @@
+.lecm_tbl {
+	background-color: gray;
+}
+
+.lecm_tbl_td_h {
+	background-color: #d3d3d3;
+}
+
+.lecm_tbl_td {
+	background-color: white;
+}
+
+
+
+
 .container {
 	width: 680px;
 	margin: auto auto 3px;
