--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1,5 +1,9 @@
 /* My Styles */
 
+input, textarea {
+    outline: none;
+}
+
 #alf-hd > div:first-child {
     margin: 0 -10px;
 }
@@ -429,6 +433,55 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel div.form-fields,
 .yui-skin-lecmTheme .yui-panel div.form-fields div {
     text-align: left;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field {
+    line-height: 25px;
+    vertical-align: middle;
+    overflow: hidden;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field label {
+    max-width: 10em;
+    float: left;
+    clear: none;
+    vertical-align: middle;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field label.checkbox {
+    line-height: 25px;
+    float: none;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field input[type='text'],
+.yui-skin-lecmTheme .yui-panel div.form-field select {
+    width: 36em;
+    height: 28px;
+    float: right;
+    clear: none;
+    padding: 2px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field input[type='checkbox'] {
+    vertical-align: middle;
+    margin: auto 0;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field > div {
+    width: 36em;
+    float: right;
+    margin: 0;
+    padding-left: 5px;
+    white-space: nowrap;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field > div.object-finder > div.current-values,
+.yui-skin-lecmTheme .yui-panel div.form-field input.autocomplete-input {
+    float: left;
+    clear: none;
+    background: #fff;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field div.show-picker {
+    float: left;
+    clear: none;
+    margin-left: 5px;
 }
 
 .yui-skin-lecmTheme .yui-panel .ft {
@@ -1644,34 +1697,8 @@ div.autocompleteCurrentValueDisplayInvisible {
     border-style: solid;
 }
 
-/* input text */
-
-div.form-field input[type="text"] {
-    border-width: 1px;
-    height:25px;
-    padding: 0;
-}
-
 div.form-field div.yui-ac {
     padding-bottom: 4px;
-}
-
-div.form-field input[type="text"].autocomplete-input {
-    min-width: 320px;
-    width: 0;
-    vertical-align: bottom;
-    position: static;
-}
-
-/* select */
-
-div.form-field select {
-    border-width: 1px;
-    height:28px;
-    min-width: 323px;
-    vertical-align: bottom;
-    padding: 0;
-    margin-right: 2px;
 }
 
 /* button */
@@ -1685,10 +1712,6 @@ div.form-field .yui-push-button,
 div.form-field .yui-button .first-child {
     height: 26px;
     text-align: center;
-}
-
-span.create-new-button .yui-button {
-    margin: 0;
 }
 
 span.create-new-button .yui-button .first-child,
@@ -1706,19 +1729,27 @@ span.tree-picker-button .yui-button .first-child button {
 
 /* currentValueDisplay */
 
+div.form-field input[type="text"],
 div.current-values,
 div.currentValueDisplay,
 div.autocompleteCurrentValueDisplay,
-div.autocompleteCurrentValueDisplayInvisible {
-    overflow: auto;
-    min-height: 25px;
+div.autocompleteCurrentValueDisplayInvisible,
+.yui-skin-lecmTheme .yui-panel div.form-field div.selectone-control select,
+.yui-skin-lecmTheme .yui-panel div.form-field input.autocomplete-input[type="text"] {
+    min-height: 26px;
     max-height: 100px;
-    width: 320px;
-    margin-right: 4px;
+    width: 28em;
+    margin: 0;
     border-width: 1px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: inherit;
+    overflow-y: auto;
 }
 
-div.current-values {
+div.current-values,
+.yui-skin-lecmTheme .yui-panel div.form-field div.selectone-control select,
+.yui-skin-lecmTheme div.form-field div.yui-ac .autocomplete-input {
     float: left;
 }
 
@@ -1726,26 +1757,30 @@ div.currentValueDisplay {
     width: 100%;
 }
 
+.yui-skin-lecmTheme .yui-panel div.form-field div.autocompleteCurrentValueDisplay,
+.yui-skin-lecmTheme .yui-panel div.form-field div.autocompleteCurrentValueDisplayInvisible {
+    width: 463px;
+    padding: 0;
+}
+
 div.autocompleteCurrentValueDisplayInvisible {
     display: none;
 }
 
-div.object-finder .show-picker {
-    clear: none;
-}
-
 a.remove-item {
-    background: url(images/remove-item.png) no-repeat right center;
-    padding-left: 13px;
-    padding-top: 13px;
+    width: 10px;
+    height: 20px;
     float: right;
+    background: url(images/remove-item.png) no-repeat right center;
 }
 
 div.association-auto-complete-selected-item,
 div.association-auto-complete-selected-item-even {
     height: 20px;
+    line-height: 20px;
+    white-space: normal;
     border-bottom: 1px solid #ccc;
-    padding: 5px 5px 0;
+    padding: 3px 5px;
 }
 div.association-auto-complete-selected-item:last-child,
 div.association-auto-complete-selected-item-even:last-child {
