Form controls style - fix for tabs with grid
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@689 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1843,3 +1843,14 @@ div.orgchart-picker-menu .search-input {
 .tree .ygtv-highlight a.ygtvspacer {
 	text-decoration: none;
 }
+
+/*datagrid control*/
+.yui-skin-lecmTheme .yui-panel div.form-field.with-grid > label {
+    float: none;
+    max-width: 100%;
+}
+.yui-skin-lecmTheme .yui-panel div.form-field.with-grid > div.datagrid {
+    width: 100%;
+    float: none;
+    padding: 0;
+}
