Form controls style - fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@698 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -438,6 +438,8 @@ h4 .lighter
     line-height: 25px;
     vertical-align: middle;
     overflow: hidden;
+    padding-top: 1px;
+    margin-bottom: 10px;
 }
 .yui-skin-lecmTheme .yui-panel div.form-field label {
     max-width: 10em;
