Form controls style
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@702 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -461,6 +461,14 @@ h4 .lighter
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+.yui-skin-lecmTheme .yui-panel div.form-field textarea {
+    width: 36em;
+    float: right;
+    clear: none;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    resize: none;
+}
 .yui-skin-lecmTheme .yui-panel div.form-field input[type='checkbox'] {
     vertical-align: middle;
     margin: auto 0;
