datagrid cell formatter for boolean; styles
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@706 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
@@ -1194,6 +1194,16 @@ z-index: 9000;
     text-align: left;
     vertical-align: middle;
 }
+
+.yui-skin-lecmTheme .datagrid .grid.yui-dt th,
+.yui-skin-lecmTheme .datagrid .grid.yui-dt .yui-dt-data td {
+    text-align: center;
+}
+.yui-skin-lecmTheme .datagrid .grid.yui-dt th:first-of-type,
+.yui-skin-lecmTheme .datagrid .grid.yui-dt .yui-dt-data td:first-of-type {
+    text-align: left;
+}
+
 .yui-skin-lecmTheme .yui-dt-list td {
 border-right: none;
 }
