--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -4,3 +4,7 @@
 #lecm-menu .statemachine-menu #menu-buttons-machine-properties span.first-child {
     background: url('../../images/lecm-orgstructure/icons_alfresco_top-menu-65.png') no-repeat 4px 4px;
 }
+
+#lecm-menu .statemachine-menu #menu-buttons-machine-deploy span.first-child {
+	background: url('../../images/lecm-orgstructure/icons_alfresco_top-menu-65.png') no-repeat 4px 4px;
+}
